# Copyright (c) 2016 Intel Corporation. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/android/rules.gni")
import("//xwalk/build/version.gni")

android_apk("xwalk_runtime_lib_apk") {
  apk_name = "XWalkRuntimeLib"
  android_manifest = "AndroidManifest.xml"
  java_files = []
  native_libs = [ "$root_out_dir/libxwalkcore.so" ]
  version_name = xwalk_version
  version_code = xwalk_version_code
  deps = [
    ":xwalk_runtime_lib_apk_assets",
    ":xwalk_runtime_lib_apk_resources",
    "//base:base_java",
    "//components/web_contents_delegate_android:web_contents_delegate_android_java_resources",
    "//ui/android:ui_java_resources",
    "//xwalk/runtime/android/core_internal:xwalk_core_internal_java",
    "//xwalk/runtime/android/core_internal:xwalk_core_internal_java_resources",
    "//xwalk/runtime/app/android:libxwalkcore",
  ]
}

android_resources("xwalk_runtime_lib_apk_resources") {
  visibility = [ ":*" ]
  resource_dirs = [ "res" ]
  custom_package = "org.xwalk.core"
}

android_assets("xwalk_runtime_lib_apk_assets") {
  visibility = [ ":*" ]
  renaming_sources = [
    "//xwalk/experimental/launch_screen/launch_screen_api.js",
    "//xwalk/experimental/wifidirect/wifidirect_api.js",
  ]
  renaming_destinations = [
    "jsapi/launch_screen_api.js",
    "jsapi/wifidirect_api.js",
  ]
  deps = [
    "//third_party/icu:icu_assets",
    "//v8:v8_external_startup_data_assets",
    "//xwalk/resources:pak_file_assets",
  ]
}
